[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "eeg-mpi"
version = "2.4.1"
description = "Multi-Agent Processing Interface for EEG Brain Signals"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "EEG-MPI Contributors", email = "dev@eeg-mpi.io" },
]
keywords = [
    "eeg", "bci", "brain-computer-interface", "neuroscience",
    "multi-agent", "signal-processing", "deep-learning", "real-time",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]
requires-python = ">=3.11"
dependencies = [
    "mne==1.7.0",
    "numpy==1.26.4",
    "scipy==1.13.0",
    "brainflow==5.12.1",
    "torch==2.3.0",
    "redis==5.0.4",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "websockets==12.0",
    "pyyaml==6.0.1",
    "rich==13.7.1",
    "click==8.1.7",
    "pylsl==1.16.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "black==24.4.2",
    "isort==5.13.2",
    "mypy==1.10.0",
    "pre-commit==3.7.1",
    "ruff==0.4.4",
]
docs = [
    "mkdocs==1.6.0",
    "mkdocs-material==9.5.24",
    "mkdocstrings[python]==0.25.1",
]
examples = [
    "matplotlib==3.9.0",
    "jupyter==1.0.0",
    "ipywidgets==8.1.3",
]

[project.urls]
Homepage = "https://github.com/eeg-mpi/eeg-mpi"
Documentation = "https://eeg-mpi.readthedocs.io"
Repository = "https://github.com/eeg-mpi/eeg-mpi"
"Bug Tracker" = "https://github.com/eeg-mpi/eeg-mpi/issues"
Changelog = "https://github.com/eeg-mpi/eeg-mpi/blob/main/CHANGELOG.md"

[project.scripts]
eegmpi = "eegmpi.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["eegmpi*", "agents*", "core*"]

[tool.setuptools.package-data]
"eegmpi" = ["dashboard/*", "assets/*"]

# ── Black ────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# ── isort ────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["eegmpi", "agents", "core"]
known_third_party = ["mne", "torch", "redis", "fastapi", "brainflow", "numpy", "scipy"]

# ── pytest ───────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "--strict-markers",
    "--tb=short",
    "-ra",
]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow-running integration tests",
    "gpu: marks tests requiring a CUDA-capable GPU",
    "hardware: marks tests requiring a physical EEG device",
]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "examples/", "docs/"]

# ── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

